# learn_grpc

./: .gitignore  CMakeLists.txt  configure_and_build.sh
include/: xzxz_rpc_const_values.h
test_client/: main.cc  xzxz_client.h
test_server/: main.cc  xzxz_server.h
xzxz_proto/: xzxz.proto
